--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
+    "expo-linear-gradient": "^13.0.2",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
@@ -22,12 +23,14 @@
     "react-native-document-picker": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.17.1",
+    "react-native-gesture-handler": "^2.18.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-page-flipper": "^1.0.1",
     "react-native-permissions": "^4.1.5",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-razorpay": "^2.3.0",
-    "react-native-reanimated": "^3.12.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-rename": "^3.2.14",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.10.7",
